# storage/api-docs/api-docs.json
@@ -118,53 +118,6 @@
                 ]
             }
         },
-        "/monteiro.daisa/v1/comptes/{compteId}/debloquer": {
-            "post": {
-                "tags": [
-                    "Comptes"
-                ],
-                "summary": "Débloquer un compte épargne",
-                "operationId": "93ec595b40eee1ee334c987ba121311b",
-                "parameters": [
-                    {
-                        "name": "compteId",
-                        "in": "path",
-                        "description": "ID du compte à débloquer",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "format": "uuid"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Compte débloqué avec succès",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/CompteDebloque"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Requête invalide"
-                    },
-                    "401": {
-                        "description": "Non autorisé"
-                    },
-                    "404": {
-                        "description": "Compte non trouvé"
-                    }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
-            }
-        },
         "/monteiro.daisa/v1/comptes": {
             "get": {
                 "tags": [
